--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-scripts": "4.0.3",
     "swiper": "7.3.1",
     "web-vitals": "^1.0.1",
-    "webpack": "4.44.2"
+    "webpack": "4.44.2",
+    "yarn": "^1.22.22"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
